# metahouse

./: CMakeLists.txt  idf_component.yml
include/: metahouse.hpp  mh_matter.hpp
include/cluster/: bridged_device_basic_information.hpp
include/endpoint/: aggregator.hpp  bridge_node.hpp  fan.hpp  generic_switch.hpp  on_off_light.hpp  on_off_plugin.hpp  root_node.hpp  window_covering.hpp
src/: aggregator.cpp  bridge_node.cpp  bridged_device_basic_information.cpp  fan.cpp  generic_switch.cpp  metahouse.cpp  mh_matter.cpp  on_off_light.cpp  on_off_plugin.cpp  root_node.cpp  window_covering.cpp
